@startuml

title __PRACTICA07's Class Diagram__\n

  namespace practica07 {
    class practica07.DataFetcher {
        ~ TOKEN_NAME : String
        ~ TOKEN_VALUE : String
        ~ client : HttpClient
        ~ obj : JSONObject
        ~ request : HttpRequest
        ~ response : HttpResponse<String>
        ~ url : String
        + getData()
        + getHTTPSResponse()
        + setUrl()
        - setHTTPSRequest()
    }
  }
  

  namespace practica07 {
    class practica07.GUI {
        - botonActualizar : JButton
        - frame : JFrame
        - infoLabel : JLabel
        - mainPanel : JPanel
        - playerLabel : JLabel[]
        + GUI()
        {static} + main()
    }
  }
  

  namespace practica07 {
    class practica07.Observer {
        - arrSize : int
        - obj : JSONObject
        - players : ArrayList<Player>
        + Observer()
        + createScorersRaking()
        + getPlayersFromData()
        + getRanking()
    }
  }
  

  namespace practica07 {
    class practica07.Player {
        # flagUrl : String
        # numberOfGoals : int
        # team : String
        - name : String
        + Player()
        + getFlagUrl()
        + getNumberOfGoals()
        + toString()
    }
  }
  

  namespace practica07 {
    abstract class practica07.Ranking {
        # title_ : String
        {abstract} + update()
        {abstract} + writeRanking()
    }
  }
  

  namespace practica07 {
    class practica07.ScorersRaking {
        - playersList : ArrayList<Player>
        + ScorersRaking()
        + update()
        + writeRanking()
    }
  }
  

  namespace practica07 {
    class practica07.Test {
        {static} + main()
        {static} + test1()
        {static} - test2()
    }
  }
  

  practica07.GUI o-- practica07.Observer : observer
  practica07.Observer o-- practica07.GUI : gui
  practica07.Observer o-- practica07.Ranking : ranking
  practica07.ScorersRaking -up-|> practica07.Ranking


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
